simplify code
Signed-off-by: before-Sunrise <unclejyj@gmail.com>